<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trackcat</string>
    <string name="recordListTitle">Aufnahmen</string>
    <string name="recordLastListTitle">Letzte Aktivitäten</string>
    <string name="recordLastListMoreLink">Mehr anzeigen</string>
    <string name="recordLastListNothing">Noch keine\nAufnahmen</string>
    <string name="link_termsOfService">http://safe-harbour.de:4242/agb</string>
    <string name="link_dataProtection">http://safe-harbour.de:4242/datenschutz</string>
    <string name="link_resetPassword">http://safe-harbour.de:4242/reset</string>
    <string name="fDashboard">DASHBOARD</string>
    <string name="fDashboardSummary">DASHBOARD_SUMMARY</string>
    <string name="fRecordlist">RECORD_LIST</string>
    <string name="fRecord">RECORD</string>
    <string name="fRecordOneItem">RECORD_ONE_ITEM</string>
    <string name="fRecordDetails">RECORD_DETAILS</string>
    <string name="fProfile">PROFILE</string>
    <string name="fEditProfile">EDITPROFILE</string>
    <string name="fEditPassword">EDITPASSWORD</string>
    <string name="fFriendSystem">FREUNDE</string>
    <string name="fFriends">FRIENDSTAB</string>
    <string name="fFindFriends">FINDFRIENDSTAB</string>
    <string name="fDeleteAccount">DELETEACCOUNT</string>
    <string name="fSettings">SETTINGS</string>
    <string name="fPageViewer">PAGE_VIEWER</string>
    <string name="fLoadScreen">LOADSCREEN</string>
    <string name="fLogIn">LOGIN</string>
    <string name="fSignIn_1">SIGNIN_1</string>
    <string name="fSignIn_2">SIGNIN_2</string>
    <string name="fSignIn_3">SIGNIN_3</string>
    <string name="fSignIn_4">SIGNIN_4</string>
    <string name="fRecordDetailsChartSpeed">RECORD_DETAILS_CHART_SPEED</string>
    <string name="fRecordDetailsChartAltitude">RECORD_DETAILS_CHART_ALTITUDE</string>
    <string name="fFriendProfile">FRIENDPROFILE</string>
    <string name="fFriendLiveProfile">FRIENDLIVEPROFILE</string>
    <string name="fPublicPersonProfile">PUBLICPERSONPROFILE</string>
    <string name="fPublicPersonProfileQuestion">PUBLICPERSONPROFILEQUESTION</string>
    <string name="fPublicPersonProfileSendQuestion">PUBLICPERSONPROFILESENDQUESTION</string>
    <string name="fFriendLiveView">FRIENDLIVEVIEW</string>
    <string name="fFriendLiveViewList">FRIENDLIVEVIEWLIST</string>
    <string name="eServer">Es tut uns leid, leider ist ein Server Fehler aufgetreten. Versuchen Sie es später nochmal...</string>
    <string name="eCheckConnection">Bitte überprüfen Sie Ihre Internetverbindung.</string>
    <string name="eEMailExists" tools:ignore="ExtraTranslation">Es tut uns leid, Ihre E-Mail Adresse ist leider schon vergeben!</string>
    <string name="createAccount">Account wird erstellt...</string>
    <string name="messageAfterCorrectRegist">Ihr Konto wurde erfolgreich erstellt. Bitte überprüfen Sie Ihr E-Mail Postfach und bestätigen Sie Ihre Registrierung, um Zugang zu Ihrem Konto zu erhalten!</string>
    <string name="eSignInUnknownError">Unbekannter Fehler beim Erstellen des Kontos!</string>
    <string name="eEMailNotVerified">Ihre E-Mail Adresse ist noch nicht verifiziert. Bitte gehen Sie in Ihr E-Mail Postfach und verifiziere Sie damit die Echtheit Ihrer E-Mail Adresse.</string>
    <string name="eDataNotCorrect" tools:ignore="ExtraTranslation">Ihre Anmeldedaten sind nicht korrekt!</string>
    <string name="login">Anmeldung...</string>
    <string name="category1">Allgemeines</string>
    <string name="category3">Über Trackcat</string>
    <string name="aboutApp">TrackCat ist eine App, die es dir ermöglicht, deine Bewegungs- und Trainingseinheiten aufzuzeichnen und anschließend mit Freunden zu teilen. Weitere Features sind in Arbeit...</string>
    <string name="cVersion_title">Version</string>
    <string name="cVersion_summary">1.6.7</string>
    <string name="feedback_title">Feedback geben</string>
    <string name="feedback_summary">Haben Sie Fragen oder Anmerkungen?</string>
    <string name="errorMsgPassword">Das Passwort wird von unserem System nicht unterstützt: Das Passwort muss zwischen 8 und 15 Zeichen lang sein und mindestens folgende Parameter enthalten: 1x Groß- und Kleinbuchstabe, 1x Zahl und 1x Sonderzeichen</string>
    <string name="errorMsgName">Der eingegebene Name entspricht keinem gültigen Format!</string>
    <string name="errorMsgEMail">Bitte kontrolliere deine E-Mail Adresse, sie entspricht keinem gültigen E-Mail Format!</string>
    <string name="tErrorPassword">Ihr Passwort ist nicht konform!</string>
    <string name="tErrorPasswordNotIdentical">Die neu gewählten Passwörter stimmen nicht überein!</string>
    <string name="tErrorName">Ihr Name ist nicht konform!</string>
    <string name="tErrorEmail">Ihr Email ist nicht konform!</string>
    <string name="tFillAllFields">Bitte alle Felder ausfüllen!</string>
    <string name="rEmail">"^\\w+([\\.-]?\\w+)*@\\w+([\\.-]?\\w+)*(\\.\\w{2,3})+$"</string>
    <string name="rPassword">"^(?=.*\\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\\s).{8,15}$"</string>
    <string name="rName">"^[A-Z](((\\-|\\s)[A-ZÄÖÜ]|\\s[a-zäöü])?[a-zäöüß]*)*$"</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="help_dashboard">Das Dashboard dient zur Übersicht über Ihre vergangenen Aktivitäten. Unter den  \"Letzte Aktivitäten\"
        finden sich Ihre letzten zwei Aufzeichnungen, wenn Sie mehr sehen wollen, können Sie dies über den Link \"Mehr anzeigen\" tun.\n\nIm unteren
        Teil der Seite finden Sie eine Übersicht der letzten Woche (Distanz und Zeit).\n\nZusätzlich haben Sie die Möglichkeit mit dem Shortcut-Button direkt zur Aufnahme zu kommen.</string>
    <string name="help_record">Hier können Sie Ihre Aktivität aufzeichnen.\n\nStarten, sowie Pausieren können Sie Ihre Aufnahme, indem Sie auf den
        entsprechenden Play-Button klicken.\n\nZum Beenden der laufenden Aufnahme halten Sie den Pause-Button für 2 Sekunden gedrückt, anschließend
        haben Sie die Möglichkeit die eben aufgezeichnete Strecke zu verwerfen oder zu speichern. \n\nWenn Sie gerade eine Internetverbindung haben, können Sie zwischen einer Liveaufzeichnung oder einer privaten Aufzeichnung wählen.</string>
    <string name="help_record_list">Hier finden Sie die gesamte Liste Ihrer Aufzeichnungen.\n\nZum Öffnen der Detailansicht klicken Sie auf die
        entsprechende Aufzeichnung. Zum Löschen ziehen Sie die entsprechende Aufzeichnung nach links.\n\nZum Aktualisieren der Liste, ziehen Sie nach unten.</string>
    <string name="help_settings">Hier haben Sie die Möglichkeit benutzerdefinierte Einstellungen vorzunehmen. Durch einfaches Togglen, Aktivieren oder
        Deaktivieren, lassen sich z.B. das Theme der App ändern oder Hilfestellungen aktivieren bzw. deaktivieren.\n\nNäheres zur von Ihnen verwendeten Version finden Sie unter \"Version\".</string>
    <string name="help_record_details">Hier können Sie alle Daten Ihrer gewählten Aufzeichnung einsehen. Durch das Wischen nach links erhalten Sie Diagramme
        über den Verlauf Ihrer Geschwindigkeit sowie die hinterlegten Höhenmeter in Relation zur Zeit.\n\nZum Bearbeiten des Namens klicken Sie einfach auf das
        \"Edit\"-Icon, neben dem derzeit verwendeten Namen.</string>
    <string name="help_profile">Hier haben Sie die Möglichkeit Ihr Profil anzusehen. Durch Klicken auf die Menüpunkte oben rechts können Sie Ihre Profildaten bearbeiten, Ihr Passwort ändern oder Ihren kompletten Account entfernen.</string>
    <string name="help_editProfile">Hier haben Sie die Möglichkeit Ihr Profil zu bearbeiten. Durch Klicken auf das aktuelle Profilbild oder ihr Gewicht/Größe/Geburtstag lassen Sich diese Einträge ebenfalls ändern.</string>
    <string name="help_editPassword">Hier haben Sie die Möglichkeit Ihr Passwort zu ändern. Hierfür müssen Sie zunächst ihr aktuelles Passwort eingeben.</string>
    <string name="help_friendSystem">Hier können Sie Ihre Freunde verwalten.\n\nÜber die Suche können Sie andere Nutzer suchen und diesen durch Klicken gegebenenfalls eine Freundschafsanfrage sendnen.\n\n
        Unter dem Tab Freunde werden alle Ihre Freunde angezeigt und Sie können sich deren Profil anzeigen lassen, den Freund entfernen, oder wenn dieser Live ist seine Liveübertragung angucken.\n\nAuf dem nächsten Tab werden alle Freunde angezeigt, die immoment eine Aufnahme live teilen.\n\Unter den letzten beiden Tabs sehen sie zum einen Ihre erhaltenden Freundschaftsanfragen und können diese bestätigen oder entfernen und zum anderen Ihre gesendeten Anfragen, die Sie gegebenfalls zurückziehen können.</string>
    <string name="help_deleteAccount">Hier können Sie Ihren Account löschen. Dieser kann nicht wiederhergestellt werden.</string>
    <string name="help_friends_profile">Hier können Sie das Profil Ihres Freundes sehen. Wenn Sie auf den Button "Freund entfernen" klicken, wird die Person aus Ihrer Freundesliste entfernt und
    Sie können nicht mehr an seinen Liveübertragungen teilnehmen.</string>
    <string name="help_friends_live_view">Hier können Sie die Liveübertragung Ihres Freundes sehen.</string>
    <string name="changeToRecording">Wechsel auf Aufnahme</string>
    <string name="noInformation" tools:ignore="ExtraTranslation">keine Angabe</string>
    <string name="genderFemale" >weiblich</string>
    <string name="genderMale">männlich</string>
    <string name="saveProfileSuccess">Profil erfolgreich gespeichert.</string>
    <string name="birthdayInFuture">Sie sind noch nicht geboren, das könnte schwierig werden!</string>
    <string name="editProfilUnknownError">Unbekannter Fehler beim Bearbeiten der Profilinformationen!</string>
    <string name="editProfileNoChanges">Keine Änderungen</string>
    <string name="tSuccessChangePassword">Passwort wurde erfolgreich geändert!</string>
    <string name="tNoConnectionPassword">Passwort konnte nicht geändert werden, bitte überprüfen Sie Ihre Internetverbindung.</string>
    <string name="tErrorOldPassword">Authentifizierung fehlgeschlagen!</string>
    <string name="tChangePasswortUnknownError">Unbekannter Fehler beim Ändern des Passworts!</string>
    <string name="deleteAccountInfoText1">Wenn Sie Ihren Account löschen, werden sämtliche Benutzerdaten gelöscht. Folgende Informationen sind davon betroffen:</string>
    <string name="bullet_1">Personenbezogene Daten (<i>Name, Profilbild, Status, etc.</i>)</string>
    <string name="bullet_2">Aufzeichnungen</string>
    <string name="bullet_3">Freunde</string>
    <string name="deleteAccountInfoText2">Ihre Daten werden dabei restlos gelöscht und können <b><u>nicht wiederhergestellt</u></b> werden!</string>
    <string name="deleteAccountCheckBox">Ich akzeptiere und möchte meinen Account <b>unwiderruflich</b> löschen.</string>
    <string name="deleteAccountModalWindowTitle">Account unwiderruflich löschen?</string>
    <string name="deleteAccountModalWindow">Beim Löschen Ihres Accounts verlieren Sie den Zugriff auf sämtliche damit verbundene Funktionen.\n\n<b>Sind Sie sich sicher, dass Sie Ihren Account unwiderruflich löschen wollen?</b></string>
    <string name="eDeleteAccountNoConnection">Account kann nicht gelöscht werden. Bitte überprüfen Sie Ihre Internetverbindung.</string>
    <string name="deleteAccountSuccess">Account wird gelöscht.</string>
    <string name="deleteAccountUnknownError">Unbekannter Fehler beim Löschen des Accounts!</string>
    <string name="friendsOptionTitle">Benutzeroptionen</string>
    <string name="friendsDelete">Wenn Sie Ihren Freund entfernen können Sie keine Liveübertragungen oder persönliche Daten von Ihm sehen. Möchten Sie wirklich Ihren Freund entfernen?</string>
    <string name="friendsQuestionDelete">Wenn Sie die Freundschaftsanfrage entfernen, müssen Sie diesem Nutzer erneut eine Anfrage schicken, um sich mit Ihm anzufreunden. Wollen Sie die Freundschaftsanfrage wirklich ablehen?</string>
</resources>