<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/category1" >
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/settings_theme"
            android:key="dark_theme"
            android:title="Dunkler Modus" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/settings_help"
            app:itemIconTint="@color/colorGreyAccent"
            app:itemTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:key="help_messages"
            android:summary="Zeige allgemeine Hinweise an"
            android:title="Hilfestellungen"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/category3" >
        <Preference
            android:selectable="false"
            android:summary="@string/aboutApp" />

        <Preference
            android:icon="@drawable/settings_version"
            android:key="current_version"
            android:summary="@string/cVersion_summary"
            android:title="@string/cVersion_title" />

        <Preference
            android:icon="@drawable/settings_feedback"
            android:key="send_feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback_title" />
    </PreferenceCategory>

</PreferenceScreen>